--- a/src/dcs_de.tex
+++ b/src/dcs_de.tex
@@ -6,7 +6,7 @@
 \usepackage{array}
 \renewcommand{\arraystretch}{1.15}
 \usepackage[vlines]{tabularht}
-\usepackage[a4paper,bottom=0.5cm,top=1.2cm,right=2.2cm,left=2.2cm]{geometry}
+\usepackage[a4paper,bottom=0.5cm,top=1.2cm,right=2.4cm,left=2.4cm]{geometry}
 \usepackage{url}
 % use Sans-Serif and Arial font everywhere
 %\renewcommand{\familydefault}{\sfdefault}
@@ -53,13 +53,13 @@
         \section*{Anlage 4 zum Schlussbericht: Berichtsblatt für Publikationen}
         {
             \footnotesize
-            \begin{tabularht*}{0.91\textheight}{0.9775\textwidth}{|p{0.32\textwidth}|p{0.32\textwidth}|p{0.32\textwidth}|}
+            \begin{tabularht*}{0.92\textheight}{0.9775\textwidth}{|p{0.32\textwidth}|p{0.32\textwidth}|p{0.32\textwidth}|}
                 \cline{1-3}
                 1. ISBN oder ISSN & \multicolumn{2}{p{0.64\textwidth}|}{2. Berichtsart} \\
                 \insertISBN & \multicolumn{2}{p{0.64\textwidth}|}{\reporttype} \\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{3a. Titel des Berichts} \\
-                \multicolumn{3}{|p{0.96\textwidth}|}{} \\
+
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \cline{1-3}
@@ -76,16 +76,18 @@
                 \cline {1-2}
                 \multicolumn{2}{|p{0.64\textwidth}|}{4b. Autoren der Publikation (Name, Vorname(n))} & \\ \cline{3-3}
                 \multicolumn{2}{|p{0.64\textwidth}|}{} &  7. Form der Publikation\\
-                \multicolumn{2}{|p{0.64\textwidth}|}{\insertAuthors} & \insertType \\
+                \multicolumn{2}{|p{0.64\textwidth}|}{\insertAuthors} & \insertType\  \phantom{Xx xx xx xx xx}\ \phantom{Xx xx xx xx xx}\ \phantom{Xx xx xx xx}\  \\
                 \cline{1-3}
-
                 \multicolumn{2}{|p{0.64\textwidth}|}{8. Durchführende Institution(en) (Name, Adresse)} & 9. Ber. Nr. Durchführende Institution \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\ \cline{3-3}
                 \multicolumn{2}{|p{0.64\textwidth}|}{\pname} & 10. Förderkennzeichen \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{\pextra} & \srefno \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{\paddr} & \\ \cline {3-3}
-                \multicolumn{2}{|p{0.64\textwidth}|}{} & 11. Seitenzahl \\
+                \multicolumn{2}{|p{0.64\textwidth}|}{} & 11a. Seitenzahl Bericht\\
+                \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
+                \multicolumn{2}{|p{0.64\textwidth}|}{} & \\ \cline {3-3}
+                \multicolumn{2}{|p{0.64\textwidth}|}{} & 11b. Seitenzahl Publikation\\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \insertPages \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \cline{1-3}
@@ -107,7 +109,6 @@
 
                 \multicolumn{3}{|p{0.96\textwidth}|}{17. Vorgelegt bei (Titel, Ort, Datum)} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
-                \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{18. Kurzfassung} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{}\\
@@ -124,7 +125,7 @@
                 \cline{1-3}
             \end{tabularht*}
 
-            \begin{tabularht*}{0.05\textheight}{0.97\textwidth}{p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}}
+            \begin{tabularht*}{0.04\textheight}{0.97\textwidth}{p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}}
             \multicolumn{4}{p{0.92\textwidth}}{} \\
             \interrowfill[0]
             \multicolumn{4}{p{0.92\textwidth}}{} \\
