--- a/src/berichtsblatt.tex
+++ b/src/berichtsblatt.tex
@@ -8,18 +8,20 @@
 \usepackage[vlines]{tabularht}
 \usepackage[a4paper,bottom=0.5cm,top=1.2cm,right=2.4cm,left=2.4cm]{geometry}
 \usepackage{url}
-% use Sans-Serif and Arial font everywhere
+%% use Sans-Serif and Arial font everywhere
 %\renewcommand{\familydefault}{\sfdefault}
 \usepackage{fontspec}
 \setmainfont{Arial}
-% set section font size to 12pt
+%% set section font size to 12pt
 \usepackage{sectsty}
 \sectionfont{\fontsize{12}{12}\selectfont}
+%
 %%%%% DATA STUFF %%%%%
 %%Type#Author#Title#Pages#Month#Year#Publisher#Keywords#Abstract#URL#ISBN#Refno#Contact#Reporttype
 \usepackage{datatool}
 \DTLsetseparator{;}
 \DTLloaddb{data}{input.csv}
+%
 %%%%%% GLOBAL CONTACT INFOS %%%%%%
 %% Sponsoring agency contact
 \newcommand{\sname}{\mbox{Bundesministerium für Bildung}}
@@ -32,6 +34,7 @@
 %% sponsoring reference number
 \newcommand{\srefno}{\mbox{13N12236}}
 \newcommand{\reporttype}{\mbox{Veröffentlichung}}
+%
 %%%%% BEGIN DOCUMENT %%%%%
 \begin{document}
 %
@@ -59,7 +62,7 @@
                 \insertISBN & \multicolumn{2}{p{0.64\textwidth}|}{\reporttype} \\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{3a. Titel des Berichts} \\
-
+                \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \cline{1-3}
@@ -91,7 +94,6 @@
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \insertPages \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \cline{1-3}
-
                 \multicolumn{2}{|p{0.64\textwidth}|}{13. Fördernde Institution(en) (Name, Adresse)} & 12. Literaturangaben \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\ \cline{3-3}
@@ -102,11 +104,9 @@
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \multicolumn{2}{|p{0.64\textwidth}|}{} & \\
                 \cline{1-3}
-
                 \multicolumn{3}{|p{0.96\textwidth}|}{16. Zusätzliche Angaben} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{\insertURL} \\
                 \cline{1-3}
-
                 \multicolumn{3}{|p{0.96\textwidth}|}{17. Vorgelegt bei (Titel, Ort, Datum)} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{} \\
                 \cline{1-3}
