--- a/src/berichtsblatt.tex
+++ b/src/berichtsblatt.tex
@@ -53,7 +53,8 @@
     {
         \clearpage
         \thispagestyle{empty}
-        \section*{Anlage 4 zum Schlussbericht: Berichtsblatt für Publikationen}
+        %\section*{Anlage zum Schlussbericht: Berichtsblatt für Publikationen}
+        \section*{\centering Berichtsblatt}
         {
             \footnotesize
             \begin{tabularht*}{0.915\textheight}{0.9775\textwidth}{|p{0.32\textwidth}|p{0.32\textwidth}|p{0.32\textwidth}|}
@@ -122,11 +123,11 @@
                 \cline{1-3}
             \end{tabularht*}
 
-            \begin{tabularht*}{0.045\textheight}{0.97\textwidth}{p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}}
-            \multicolumn{4}{p{0.92\textwidth}}{} \\
-            \interrowfill[0]
-            \multicolumn{3}{p{0.69\textwidth}}{} & \hfill $\overline{\text{\bf{BMBF-Vordr.\ 3831/03.99}}}$ \\
-            \end{tabularht*}
+%            \begin{tabularht*}{0.045\textheight}{0.97\textwidth}{p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}p{0.23\textwidth}}
+%            \multicolumn{4}{p{0.92\textwidth}}{} \\
+%            \interrowfill[0]
+%            \multicolumn{3}{p{0.69\textwidth}}{} & \hfill $\overline{\text{\bf{BMBF-Vordr.\ 3831/03.99}}}$ \\
+%            \end{tabularht*}
         }
         \newpage
     }
