--- a/src/berichtsblatt.tex
+++ b/src/berichtsblatt.tex
@@ -95,7 +95,7 @@
                 \multicolumn{3}{|p{0.96\textwidth}|}{\insertURL} \\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{17. Vorgelegt bei (Titel, Ort, Datum)} \\
-                \multicolumn{3}{|p{0.96\textwidth}|}{\insertPubAt, \insertLocation\ \insertMonth \ \insertYear} \\
+                \multicolumn{3}{|p{0.96\textwidth}|}{\emph{\insertPubAt}, \insertLocation\ \insertMonth \ \insertYear} \\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{18. Kurzfassung} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{}\\
