--- a/src/berichtsblatt.tex
+++ b/src/berichtsblatt.tex
@@ -93,9 +93,11 @@
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{16. Zusätzliche Angaben} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{\insertURL} \\
+                \multicolumn{3}{|p{0.96\textwidth}|}{}\\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{17. Vorgelegt bei (Titel, Ort, Datum)} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{\emph{\insertPubAt}, \insertLocation\ \insertMonth \ \insertYear} \\
+                \multicolumn{3}{|p{0.96\textwidth}|}{}\\
                 \cline{1-3}
                 \multicolumn{3}{|p{0.96\textwidth}|}{18. Kurzfassung} \\
                 \multicolumn{3}{|p{0.96\textwidth}|}{}\\
